# catbird

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  TODO.md  data_with_dp.json  environment.yml  mypy.ini  pyproject.toml
catbird/apis/: __init__.py  test.py  train.py
catbird/core/: __init__.py
catbird/datasets/: __init__.py  builder.py  graph_sent_pair_dataset.py  graph_utils.py  quora.py  sentence_pair_dataset.py  utils.py
catbird/models/: __init__.py  beam_search.py  builder.py  edd.py  edl.py  graph_transformer.py  incremental_decoding.py  registry.py  rvae.py  state.py  t5.py
catbird/ops/: __init__.py  graph.py
catbird/tokenizers/: __init__.py  builder.py
catbird/utils/: __init__.py  generation_mixin.py  registry.py
configs/: attention_lstm_mscoco.py  attention_lstm_quora.py  edd_quora.py  edd_quora.yaml  edl_quora.yaml  edlp.yaml  gcn_lstm_mscoco.py  gcn_lstm_quora.py  lstm_quora.yaml  quora.py  rgat_attention_lstm_quora.py  rgat_lstm_quora.py  rgat_residual_lstm_quora.py  stacked_residual_lstm_mscoco.py  stacked_residual_lstm_quora.py  t5_ie_quora.yaml  t5_quora.py  t5_quora.yaml  transformer_quora.py
testing/: openie_test.py  pg6130.txt
testing/paraphrase_gen_custom_dataset/: Paraphrase.py  paraphrase_generator.py
tests/: model.py  test_build_semantic_graph.py  test_create_data.py  test_optimizer.py  test_tokenizer.py  testing.py
tests/test_apis/: test_train.py
tests/test_datasets/: test_batch_loader.py  test_graph_dataset.py  test_open_ie.py  test_quora.py  (+2 more)
tools/: create_data.py  inference.py  test.py  train.py  train2.py
(+97 files in other folders)
